# ProCo

./: .cursorignore  .env.example  .gitignore  README.md  SPEC.md  db.py  main.py  pyproject.toml  vercel.json
app/: main.py  models.py
app/api/: deps.py
app/api/routers/: chat.py  issues.py  vendors.py
app/services/: ai_agent.py  ai_stub.py
app/web/: package.json
app/web/app/: globals.css
app/web/app/dashboard/: page.tsx
app/web/app/tenant/: page.tsx
app/web/app/tenant/report/: page.tsx
app/web/lib/: api.ts
app/web/styles/: globals.css
docs/: START.md  agentic-structure.md  api.md
