[project]
name = "proco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "python-dotenv>=1.0.0",
    "psycopg[binary]>=3.1.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.27.0",
    "dotenv>=0.9.9",
]
